# -Mailing

./: .env  .env.template  db.sqlite3  pyproject.toml
config/: settings.py  urls.py
mailings/: models.py  services.py  urls.py  views.py
mailings/management/commands/: send_mailing.py
mailings/migrations/: 0001_initial.py  0002_alter_attempt_options_alter_mailing_options_and_more.py
templates/: base.html  home.html
templates/mailings/: attempt_list.html  mailing_confirm_delete.html  mailing_detail.html  mailing_list.html  message_confirm_delete.html  message_form.html  message_list.html  recipient_confirm_delete.html  recipient_form.html  recipient_list.html
templates/registration/: login.html  register.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_avatar_and_more.py
users/templates/users/: profile.html
