[tool.poetry]
name = "mailing-list-management-service"
version = "0.1.0"
description = ""
authors = ["Виктор <viktor.dubov.2007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

